// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets a caption field error when there is a caption error 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Add
     Dewdrop
  </h2>
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div>
        <label
          htmlFor="image"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Image
        </label>
        <div
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "borderColor": "#eeeeee",
              "borderRadius": 2,
              "borderStyle": "dashed",
              "borderWidth": 2,
              "color": "#bdbdbd",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "height": "200px",
              "outline": "none",
              "padding": "20px",
              "transition": "border .24s ease-in-out",
            }
          }
          tabIndex={0}
        >
          <input
            accept="image/*"
            autoComplete="off"
            multiple={false}
            onChange={[Function]}
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            tabIndex={-1}
            type="file"
          />
          <p>
            Drag-n-drop photo here, or click to select photo
          </p>
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <div
        className="form-group has-error"
      >
        <label
          htmlFor="caption"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Caption
        </label>
        <div
          className="field"
        >
          <input
            className="form-control"
            name="caption"
            onChange={[MockFunction]}
            type="text"
          />
          <div
            className="alert alert-danger"
          >
            error
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets an image field error when there is an image error 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Add
     Dewdrop
  </h2>
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div>
        <label
          htmlFor="image"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Image
        </label>
        <div
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "borderColor": "#eeeeee",
              "borderRadius": 2,
              "borderStyle": "dashed",
              "borderWidth": 2,
              "color": "#bdbdbd",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "height": "200px",
              "outline": "none",
              "padding": "20px",
              "transition": "border .24s ease-in-out",
            }
          }
          tabIndex={0}
        >
          <input
            accept="image/*"
            autoComplete="off"
            multiple={false}
            onChange={[Function]}
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            tabIndex={-1}
            type="file"
          />
          <p>
            Drag-n-drop photo here, or click to select photo
          </p>
          <div />
        </div>
        <div
          className="alert alert-danger"
        >
          error
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="caption"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Caption
        </label>
        <div
          className="field"
        >
          <input
            className="form-control"
            name="caption"
            onChange={[MockFunction]}
            type="text"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Dewdrop
  </h2>
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div>
        <label
          htmlFor="image"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Image
        </label>
        <div
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "borderColor": "#eeeeee",
              "borderRadius": 2,
              "borderStyle": "dashed",
              "borderWidth": 2,
              "color": "#bdbdbd",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "height": "200px",
              "outline": "none",
              "padding": "20px",
              "transition": "border .24s ease-in-out",
            }
          }
          tabIndex={0}
        >
          <input
            accept="image/*"
            autoComplete="off"
            multiple={false}
            onChange={[Function]}
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            tabIndex={-1}
            type="file"
          />
          <p>
            Drag-n-drop photo here, or click to select photo
          </p>
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="caption"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Caption
        </label>
        <div
          className="field"
        >
          <input
            className="form-control"
            name="caption"
            onChange={[MockFunction]}
            type="text"
            value="My next D&D character!"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
</form>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     Dewdrop
  </h2>
  <div
    className="row"
  >
    <div
      className="col-md-4"
    >
      <div>
        <label
          htmlFor="image"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Image
        </label>
        <div
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fafafa",
              "borderColor": "#eeeeee",
              "borderRadius": 2,
              "borderStyle": "dashed",
              "borderWidth": 2,
              "color": "#bdbdbd",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "height": "200px",
              "outline": "none",
              "padding": "20px",
              "transition": "border .24s ease-in-out",
            }
          }
          tabIndex={0}
        >
          <input
            accept="image/*"
            autoComplete="off"
            multiple={false}
            onChange={[Function]}
            onClick={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            tabIndex={-1}
            type="file"
          />
          <p>
            Drag-n-drop photo here, or click to select photo
          </p>
          <div />
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-8"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="caption"
          style={
            Object {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginTop": 20,
            }
          }
        >
          Caption
        </label>
        <div
          className="field"
        >
          <input
            className="form-control"
            name="caption"
            onChange={[MockFunction]}
            type="text"
            value="My next D&D character!"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
</form>
`;
